<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Room8</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="login">login</string>
    <string name="password">Password</string>
    <string name="New_to_Room8">New to Room8? Register here</string>
    <string name="user_registration">USER REGISTRATION</string>
    <string name="email">Email</string>
    <string name="register">REGISTER</string>
    <string name="go_register_activity">Register</string>
    <string name="title_activity_split_action_bar">SplitActionBarActivity</string>
    <string name="title_activity_home">Room8</string>
    <string name="please_check_internet_connection">Sorry, trouble with connecting to server.\nPlease check your internet connection and try later</string>
    <string name="title_activity_budget_manager">BudgetManagerActivity</string>
    <string name="newUser">This apartment already exists, \ndo you wish to send a request to this apartment admin?</string>
    <string name="title_activity_push_apartment">PushApartmentActivity</string>
    <string name="title_activity_push_apartment_admin">PushApartmentAdminActivity</string>
    <string name="newAdmin">We did not find this apartment, \ndo you wish to create a new apartment as an admin?</string>
    <string name="Confirm">Confirm</string>
    <string name="Cancel">Cancel</string>
    <string name="apartment">Apartment NickName</string>
    <string name="name">Name</string>
    <string name="admin_confirmation">wants to be a part of your apartment,\ndo you wish to confirm?\nnote! clicking on cancel will remove this user from this app</string>
    <string name="title_activity_bills">BillsActivity</string>
    <string name="title_activity_edit_new_bill">Edit_new_billActivity</string>
    <string name="title_activity_bill__information">Bill_InformationActivity</string>
    <string name="mainTitle">mainTitle: </string>
    <string name="months">#Mm </string>
    <string name="Title">Title: </string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="paid_from_url">Have you paid the bill from attached Web Link ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="missingTitle">Missing Title</string>
    <string name="missingVisibleTo">Missing roommates</string>
    <string name="link_hint">url or empty</string>
    <string name="roomates">Roomates</string>
    <string name="create">Created By: </string>
    <string name="link_payment">Payment Link: </string>
    <string name="visible_to">Visble To: </string>
    <string name="visible_to_names">Choose Roommate:</string>
    <string name="status">Status: </string>
    <string name="amount">Amount: </string>
    <string name="short_time_press">Press shortly to enter payments screen </string>
    <string name="long_time_press">Press and hold to enter edit category screen </string>
    <string name="per_roomie">Per Roomie: </string>
    <string name="duedate">Due Date: </string>
    <string name="paymentDur">Payment Dur: </string>
    <string name="paidBy">Paid By: </string>
    <string name="billPaid">Paid </string>
    <string name="billUnpaid">Unpaid </string>
    <string name="PAY">PAY </string>
    <string name="ok">OK </string>
    <string name="cancel">Cancel </string>
    <string name="BILLS">BILLS</string>
    <string name="url_error">Website entered incorrectly</string>
    <string name="url_valid">Valid url</string>
    <string name="title_activity_multilple_choice_dialog">MultilpleChoiceDialog</string>
    <string name="title_activity_multi_choice_dialog">MultiChoiceDialog</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="title_activity_shopping_list">ShoppingListActivity</string>
    <string name="title_activity_shopping_edit">ShoppingEditActivity</string>
    <string name="bills">Bills</string>
    <string name="budget">Budget</string>
    <string name="shopping">Shopping</string>
    <string name="schedule">Schedule</string>
    <string name="error_name_exists">name exists</string>
    <string name="error_invalid_email">Invalid Email address </string>
    <string name="error_invalid_password">Invalid Password </string>
    <string name="existing_email">This Email already exists</string>
    <string name="incorrect_apartment">Apparently you entered an incorrect apartment name</string>
    <string name="existing_apartment">Apparently you entered an existing apartment</string>
    <string name="error_apartment">Please choose a different apartment name</string>
    <string name="error_missing_email">Email is missing</string>
    <string name="error_missing_password">Password is missing</string>
    <string name="error_missing_apartment">Apartment is missing</string>
    <string name="error_missing_name">Name is missing</string>
    <string name="waiting_for_confirmAdmin">Waiting for your administor to confirm you as a member to this apartment</string>
    <string name="ask_admin_confirm_notification">wants to be a part of your apartment, do you want to confirm?</string>
    <string name="error_already_loged_in">This user is already logged in on another device</string>
    <string name="please_change_field">Please change this field</string>
    <string name="error_incorrect_PasswordOrEmail">Incorrect Password or Email</string>
    <string name="enter_SSID">Please Enter Your Home Router name to continue</string>
    <string name="continue_btn">Continue</string>
    <string name="title_activity_home_continue">HomeContinueActivity</string>
    <string name="title_activity_date_control_set">DateControlSet</string>
    <string name="title_activity_sticky_note">StickyNoteActivity</string>
    <string name="title_activity_edit_new_note">Edit_new_noteActivity</string>
    <string name="title_activity_bill_payments_list">BillPaymentsListActivity</string>
    <string name="title_activity_cam">CamActivity</string>
    <string name="pickSSID">Choose your wifi connection from list</string>
    <string name="dialogSSID">Choose wifi network</string>
    <string name="title_activity_budget_add">BudgetAddActivity</string>
    <string name="notify_before_exception">Notify me before I excess my budget</string>
    <string name="notify_exception">Notify me when there is an exception in budget amount</string>
    <string name="budget_amount">Budget Amount:</string>
    <string name="title_activity_budget_edit">BudgetEditActivity</string>
    <string name="submit">Submit</string>
    <string name="error_missing_amount">Budget amount is missing</string>
    <string name="budget_home_dialog">Your expenses exceeded your budget!</string>
    <string name="title_activity_budget_graph">BudgetGraphActivity</string>
    <string name="add_shopping_list">Add Shopping List</string>
    <string name="go_home">Go back home</string>
    <string name="pay_debt">Select paid debt</string>
    <string name="paid">Paid</string>
    <string name="budget_limit_text_view">Please type the needed limit of the amount</string>
    <string name="sticky">Sticky note</string>
    <string name="FunZone">Gallery</string>
    <string name="budget_limit_header">Budget limit</string>
    <string name="title">title</string>
    <string name="no_title">no_title</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>